# volume-rendering-demo

./: CMakeLists.txt  LICENSE  README.md  files.cmake  main.cpp  opengl.cpp  opengl.h  panel.cpp  panel.h  shader.qrc  shaderprogram.cpp  shaderprogram.h  transferfunctiondialog.cpp  transferfunctiondialog.h  volumemapper3d.cpp  volumemapper3d.h
shader/: fragment-raycast.glsl  fragment-setup.glsl  vertex-raycast.glsl  vertex-setup.glsl
